--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         | Tomeggo</a>
                         | <a href="http://www.miaomoe.net" style="text-decoration:none; color:white;margin-bottom: 0%;">XY_kuailexy</a>
                         | 杰克 </p>
-                    <p style="color: rgb(255, 255, 255); text-shadow: 1px 1px 1px rgb(0,0,0,0.3); margin-bottom: 0%;">Fire_God | Mark_Q</p>
+                    <p style="color: rgb(255, 255, 255); text-shadow: 1px 1px 1px rgb(0,0,0,0.3); margin-bottom: 0%;">Fire_God | Mark_Q | ZhongLing</p>
                     <p style="color: rgb(255, 255, 255); text-shadow: 1px 1px 1px rgb(0,0,0,0.3); margin-bottom: 0%;"></p>
                 </div>
             </div>
