--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
         <div class="row">
             <div class="col text-center">
-                <p style="color: rgb(255, 255, 255); text-shadow: 1px 1px 1px rgb(0,0,0,0.5); margin-bottom: 1vh;"><b>IP：play.cubexmc.org (java & 基岩版) </b></p>
+                <p style="color: rgb(255, 255, 255); text-shadow: 1px 1px 1px rgb(0,0,0,0.5); margin-bottom: 1vh;"><b>IP：play.cubexmc.org (java) </b></p>
                 <p style="color: rgb(255, 255, 255); text-shadow: 1px 1px 1px rgb(0,0,0,0.5); margin-bottom: 1vh"><b>QQ群：470579814</b></p>
                 <a target="_blank" href="https://www.bilibili.com/video/BV1Je411V7ko/" class="btn btn-danger" style="box-shadow: 0 1px 1px 0 rgb(0,0,0,0.5);" data-loading-text="Loading..." 
                     type="button"> <b>宣传片</b>
