--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
 
                 <div class="row" style="margin-top: 2rem;">
                     <h4 style="color: rgb(255, 255, 255); text-shadow: 1px 1px 1px rgb(0,0,0,0.3); margin-bottom: 1%;">
-                        管理团队:</h4> 
-                        | AkariDream 
-                        | <p style="color: rgb(255, 255, 255); text-shadow: 1px 1px 1px rgb(0,0,0,0.3); margin-bottom: 0%;"><a href="http://angushushu.com" style="text-decoration:none; color:white; margin-bottom: 0%;">angushushu</a>
+                        管理团队:</h4>
+                        <p style="color: rgb(255, 255, 255); text-shadow: 1px 1px 1px rgb(0,0,0,0.3); margin-bottom: 0%;"><a href="http://angushushu.com" style="text-decoration:none; color:white; margin-bottom: 0%;">angushushu</a>
+                        | AkariDream
                         | fire_God
-                        | <a href="https://space.bilibili.com/3732751" style="text-decoration:none; color:white; margin-bottom: 0%;">[退休]linzaiua</a> 
-                        | <a href="https://siyangchen.com/" style="text-decoration:none; color:white;margin-bottom: 0%;">[退休]SiYang</a> 
+                        | <a href="https://space.bilibili.com/3732751" style="text-decoration:none; color:white; margin-bottom: 0%;">[退休]linzaiua</a><br>
+                        <a href="https://siyangchen.com/" style="text-decoration:none; color:white;margin-bottom: 0%;">[退休]SiYang</a> 
                         | Tomeggo</a>
                         | <a href="http://www.miaomoe.net" style="text-decoration:none; color:white;margin-bottom: 0%;">XY_kuailexy</a>
                         | 杰克 </p>
