--- a/index.html
+++ b/index.html
@@ -84,16 +84,16 @@
                         管理团队:</h4>
                         <p style="color: rgb(255, 255, 255); text-shadow: 1px 1px 1px rgb(0,0,0,0.3); margin-bottom: 0%;">
                         00
-                        | <a href="http://angushushu.com" style="text-decoration:none; color:white; margin-bottom: 0%;">angushushu</a>
+                        | <a href="http://angushushu.com" style="text-decoration:none; color:white; margin-bottom: 0%;">[退休]angushushu</a>
                         | AkariDream
                         | fire_God
                         | Furiina
                         | heckteck<br>
                         <a href="https://space.bilibili.com/3732751" style="text-decoration:none; color:white; margin-bottom: 0%;">[退休]linzaiua</a>
-                        | <a href="https://siyangchen.com/" style="text-decoration:none; color:white;margin-bottom: 0%;">[退休]SiYang</a> 
+                        | <a href="https://siyangchen.com/" style="text-decoration:none; color:white;margin-bottom: 0%;">SiYang</a> 
                         | Tomeggo</a>
-                        | <a href="http://www.miaomoe.net" style="text-decoration:none; color:white;margin-bottom: 0%;">XY_kuailexy</a></p>
-                    <p style="color: rgb(255, 255, 255); text-shadow: 1px 1px 1px rgb(0,0,0,0.3); margin-bottom: 0%;">Hotwind | LZI1004</p>
+                        | <a href="http://www.miaomoe.net" style="text-decoration:none; color:white;margin-bottom: 0%;">XY_kuailexy</a>
+                        <a href="https://blog.hotwind.cc" style="text-decoration:none; color:white; margin-bottom: 0%;">Hotwind</a></p>
                 </div>
             </div>
             <!-- <div class="col">Col 2</div> -->
