--- a/html/report.html
+++ b/html/report.html
@@ -40,10 +40,10 @@
                         <a class="nav-link" target="_blank" href="https://docs.qq.com/doc/DZUNTc1BtaW5oc21B">指南</a>
                     </li>
                     <li>
-                        <a class="nav-link" href="report.html"><b>工单</b></a>
+                        <a class="nav-link" href="rules.html">规则</a>
                     </li>
                     <li>
-                        <a class="nav-link" href="rules.html">规则</a>
+                        <a class="nav-link" href="report.html"><b>工单</b></a>
                     </li>
                     <li>
                         <a class="nav-link" target="_blank" href="https://afdian.net/@cubex">捐款</a>
@@ -52,7 +52,7 @@
                         <a class="nav-link" target="_blank" href="https://jq.qq.com/?_wv=1027&k=g38XNewm">QQ群</a>
                     </li>
                     <li>
-                        <a class="nav-link" target="_blank" href="https://discord.gg/aavjwJXyyK">Discord</a>
+                        <a class="nav-link" target="_blank" href="https://discord.gg/QBN7wPydh7">Discord</a>
                     </li>
                 </ul>
             </div>
@@ -64,7 +64,7 @@
         </div> -->
         <div class="row">
             <div class="col d-flex justify-content-center">
-                <iframe height="1200" width="800" src="https://wj.qq.com/s2/9488664/94ff/" frameborder="0" allowfullscreen></iframe>
+                <iframe height="1200" width="800" src="https://docs.qq.com/form/page/DZUtzdGxhVmtPYktl" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
     </div>
