--- a/html/rules.html
+++ b/html/rules.html
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="container" style="height: 200px;">
         <nav class="navbar navbar-expand-md navbar-dark">
             <a href="../index.html" class="navbar-brand">
                 <img src="../imgs/server-icon.png" alt="CubeX icon" width="32" height="32" class="d-inline-block align-bottom">
@@ -40,10 +40,10 @@
                         <a class="nav-link" target="_blank" href="https://docs.qq.com/doc/DZUNTc1BtaW5oc21B">指南</a>
                     </li>
                     <li>
-                        <a class="nav-link" href="report.html" style="text-shadow: 1px 1px 1px rgb(0,0,0,0.5)">工单</a>
+                        <a class="nav-link" href="rules.html" style="color:white; text-shadow: 1px 1px 1px rgb(0,0,0,0.5)"><b>规则</b></a>
                     </li>
                     <li>
-                        <a class="nav-link" href="rules.html" style="color:white; text-shadow: 1px 1px 1px rgb(0,0,0,0.5)"><b>规则</b></a>
+                        <a class="nav-link" href="report.html" style="text-shadow: 1px 1px 1px rgb(0,0,0,0.5)">工单</a>
                     </li>
                     <li>
                         <a class="nav-link" target="_blank" href="https://afdian.net/@cubex" style="text-shadow: 1px 1px 1px rgb(0,0,0,0.5)">捐款</a>
@@ -52,44 +52,27 @@
                         <a class="nav-link" target="_blank" href="https://jq.qq.com/?_wv=1027&k=g38XNewm" style="text-shadow: 1px 1px 1px rgb(0,0,0,0.5)">QQ群</a>
                     </li>
                     <li>
-                        <a class="nav-link" target="_blank" href="https://discord.gg/aavjwJXyyK" style="text-shadow: 1px 1px 1px rgb(0,0,0,0.5)">Discord</a>
+                        <a class="nav-link" target="_blank" href="https://discord.gg/QBN7wPydh7" style="text-shadow: 1px 1px 1px rgb(0,0,0,0.5)">Discord</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </div>
-    <div class="container" style="color: white;">
-        <div class="row text-center">
-            <h3 style="margin-top: 10vh; margin-bottom: 5vh; color: rgb(255, 255, 255); text-shadow: 1px 1px 1px rgb(0,0,0,0.5);"><b>CubeX 玩家守则</b></h3>
-        </div>
-        <div class="row" style="text-shadow: 1px 1px 1px rgb(0,0,0,0.5);">
-            <div class="col col-4"></div>
-            <div class="col col-3">
-                <h6><b>注意事项</b></h6>
-                <p>1. 禁止在PVP领地开挂</p>
-                <p>2. 禁止盗窃，破坏他人建筑</p>
-                <p>3. 禁止恶意圈地</p>
-                <p>4. 禁止欺负萌新</p>
-                <p>5. 禁止创建大量机器人</p>
-                <p>6. 禁止人身攻击</p>
-                <p>7. 请勿私下交易</p>
-                <p>8. 请勿建造卡服机</p>
-                <p>9. 禁止盗用他人地图画</p>
-                <p>10. 禁止公开宣传其他服务器</p>
-                <a style="color:white" target="_blank" href="https://docs.qq.com/doc/DZVVudEFSa09hUmpt">点击查看最新管理规范</a>
+    <div class="container" style="color: white; text-align: center;">
+        <div class="row justify-content-center">
+            <div class="col-auto">
+                <a target="_blank" href="https://docs.qq.com/doc/DZVVudEFSa09hUmpt" class="btn btn-danger" style="box-shadow: 0 1px 1px 0 rgb(0 0 0 / 50%);" data-loading-text="Loading..." type="button">
+                    <b>点我查看最新管理规范</b>
+                </a>
             </div>
-            <div class="col col-3">
-                <h6><b>处罚</b></h6>
-                <p>罚款2万</p>
-                <p>根据情况罚款1-20万&监禁</p>
-                <p>删除领地罚款1万&监禁</p>
-                <p>罚款1万</p>
-                <p>罚款2万</p>
-                <p>视具体情况而定</p>
-                <p>被骗一律不负责</p>
-                <p>关停或删除机器，罚款2万</p>
-                <p>没收地图画，罚款2万</p>
-                <p>视具体情况而定</p>
+        </div>
+        <div class="row">
+            <!-- 缩小行间距 -->
+            <div class="col" style="font-size: small;">
+                <p><br>
+                    服务器规则由管理团队执行，解释权归管理组所有<br>
+                    如过您发现违规管理或玩家，请提交工单进行举报
+                </p>
             </div>
         </div>
     </div>
