--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                         <a class="nav-link" target="_blank" href="https://docs.qq.com/doc/DZUNTc1BtaW5oc21B">指南</a>
                     </li>
                     <li>
-                        <a class="nav-link" href="html/report.html">工单</a>
+                        <a class="nav-link" href="html/rules.html">规则</a>
                     </li>
                     <li>
-                        <a class="nav-link" href="html/rules.html">规则</a>
+                        <a class="nav-link" href="html/report.html">工单</a>
                     </li>
                         <a class="nav-link" target="_blank" href="https://afdian.net/@cubex">捐款</a>
                     </li>
@@ -51,7 +51,7 @@
                         <a class="nav-link" target="_blank" href="https://jq.qq.com/?_wv=1027&k=g38XNewm">QQ群</a>
                     </li>
                     <li>
-                        <a class="nav-link" target="_blank" href="http://discord.gg/QBN7wPydh7">Discord</a>
+                        <a class="nav-link" target="_blank" href="https://discord.gg/QBN7wPydh7">Discord</a>
                     </li>
                 </ul>
             </div>
@@ -81,19 +81,30 @@
 
                 <div class="row" style="margin-top: 2rem;">
                     <h4 style="color: rgb(255, 255, 255); text-shadow: 1px 1px 1px rgb(0,0,0,0.3); margin-bottom: 1%;">
-                        管理团队:</h4>
+                        管理:</h4>
                         <p style="color: rgb(255, 255, 255); text-shadow: 1px 1px 1px rgb(0,0,0,0.3); margin-bottom: 0%;">
-                        00
-                        | <a href="http://angushushu.com" style="text-decoration:none; color:white; margin-bottom: 0%;">[退休]angushushu</a>
-                        | AkariDream
+                        [退休]00
+                        | <a target="_blank" href="http://angushushu.com" style="text-decoration:none; color:white; margin-bottom: 0%;">[退休]angushushu</a>
+                        | [退休]AkariDream
                         | fire_God
                         | Furiina
-                        | heckteck<br>
-                        <a href="https://space.bilibili.com/3732751" style="text-decoration:none; color:white; margin-bottom: 0%;">[退休]linzaiua</a>
-                        | <a href="https://siyangchen.com/" style="text-decoration:none; color:white;margin-bottom: 0%;">SiYang</a> 
-                        | Tomeggo</a>
-                        | <a href="http://www.miaomoe.net" style="text-decoration:none; color:white;margin-bottom: 0%;">XY_kuailexy</a>
-                        <a href="https://blog.hotwind.cc" style="text-decoration:none; color:white; margin-bottom: 0%;">Hotwind</a></p>
+                        | [退休]heckteck<br>
+                        <a target="_blank" href="https://space.bilibili.com/3732751" style="text-decoration:none; color:white; margin-bottom: 0%;">[退休]linzaiua</a>
+                        | <a target="_blank" href="https://siyangchen.com/" style="text-decoration:none; color:white;margin-bottom: 0%;">SiYang</a> 
+                        | [退休]Tomeggo</a>
+                        | <a target="_blank" href="http://www.miaomoe.net" style="text-decoration:none; color:white;margin-bottom: 0%;">[退休]XY_kuailexy</a>
+                        | <a target="_blank" href="https://blog.hotwind.cc" style="text-decoration:none; color:white; margin-bottom: 0%;">Hotwind</a><br>
+                        AaenTary
+                        | <a target="_blank" href="https://user.qzone.qq.com/2077007554/infocenter" style="text-decoration:none; color:white; margin-bottom: 0%;">yzh</a>
+                        | <a target="_blank" href="https://zh-cn.namemc.com/profile/NinKauneus.1" style="text-decoration:none; color:white; margin-bottom: 0%;">NinKauneus</a>
+                        | Mark_Q
+                        </p>
+                    <h4 style="color: rgb(255, 255, 255); text-shadow: 1px 1px 1px rgb(0,0,0,0.3); margin-bottom: 1%;"><br>
+                        建筑:</h4>
+                        <p style="color: rgb(255, 255, 255); text-shadow: 1px 1px 1px rgb(0,0,0,0.3); margin-bottom: 0%;">
+                        qorhe
+                        | wudimoyuren
+                        </p>
                 </div>
             </div>
             <!-- <div class="col">Col 2</div> -->
