--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         | <a target="_blank" href="https://siyangchen.com/" style="text-decoration:none; color:white;margin-bottom: 0%;">SiYang</a> 
                         | [退休]Tomeggo</a>
                         | <a target="_blank" href="http://www.miaomoe.net" style="text-decoration:none; color:white;margin-bottom: 0%;">[退休]XY_kuailexy</a>
-                        | <a target="_blank" href="https://blog.hotwind.cc" style="text-decoration:none; color:white; margin-bottom: 0%;">Hotwind</a><br>
+                        | <a target="_blank" href="https://blog.hotwind.cc" style="text-decoration:none; color:white; margin-bottom: 0%;">HotWind</a><br>
                         AaenTary
                         | <a target="_blank" href="https://user.qzone.qq.com/2077007554/infocenter" style="text-decoration:none; color:white; margin-bottom: 0%;">yzh</a>
                         | <a target="_blank" href="https://zh-cn.namemc.com/profile/NinKauneus.1" style="text-decoration:none; color:white; margin-bottom: 0%;">NinKauneus</a>
