--- a/index.html
+++ b/index.html
@@ -87,19 +87,20 @@
                         | <a target="_blank" href="http://angushushu.com" style="text-decoration:none; color:white; margin-bottom: 0%;">[退休]angushushu</a>
                         | [退休]AkariDream
                         | fire_God
-                        | Furiina
+                        | [退休]Furiina
                         | [退休]heckteck<br>
                         <a target="_blank" href="https://space.bilibili.com/3732751" style="text-decoration:none; color:white; margin-bottom: 0%;">[退休]linzaiua</a>
                         | <a target="_blank" href="https://siyangchen.com/" style="text-decoration:none; color:white;margin-bottom: 0%;">SiYang</a> 
                         | [退休]Tomeggo</a>
                         | <a target="_blank" href="http://www.miaomoe.net" style="text-decoration:none; color:white;margin-bottom: 0%;">[退休]XY_kuailexy</a>
                         | <a target="_blank" href="https://blog.hotwind.cc" style="text-decoration:none; color:white; margin-bottom: 0%;">HotWind</a><br>
-                        AaenTary
                         | <a target="_blank" href="https://adlambxd.github.io" style="text-decoration:none; color:white; margin-bottom: 0%;">yzh</a>
                         | <a target="_blank" href="https://zh-cn.namemc.com/profile/NinKauneus.1" style="text-decoration:none; color:white; margin-bottom: 0%;">NinKauneus</a>
                         | Mark_Q
+                        | <a target="_blank" href="adlambxd.github.io" style="text-decoration:none; color:white; margin-bottom: 0%;">AdLamb</a>
+
                         </p>
-                    <h4 style="color: rgb(255, 255, 255); text-shadow: 1px 1px 1px rgb(0,0,0,0.3); margin-bottom: 1%;"><br>
+                    <h4 style="color: rgb(255， 255， 255); text-shadow: 1px 1px 1px rgb(0,0,0,0.3); margin-bottom: 1%;"><br>
                         建筑:</h4>
                         <p style="color: rgb(255, 255, 255); text-shadow: 1px 1px 1px rgb(0,0,0,0.3); margin-bottom: 0%;">
                         qorhe
