--- a/index.html
+++ b/index.html
@@ -1,117 +1,61 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
-    <title>方块叉 CubeX</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/index.css">
-    <style>
-        .hidden {
-            /* display: none; */
-        }
-    </style>
+    <title>Minecraft服务器状态</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="container">
-        <nav class="navbar navbar-expand-md navbar-dark">
-            <a href="#" class="navbar-brand">
-                <img src="imgs/server-icon.png" alt="CubeX icon" width="32" height="32" class="d-inline-block align-bottom">
-                <span class="hidden"><b>方块叉 CubeX</b></span>
-            </a>
-            <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#toggleMobileMenu"
-                aria-controls="toggleMobileMenu"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-            >
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="toggleMobileMenu">
-                <ul class="navbar-nav ms-auto text-center">
-                    <li>
-                        <a class="nav-link" href="index.html"><b>主页</b></a>
-                    </li>
-                    <li>
-                        <a class="nav-link" target="_blank" href="https://docs.qq.com/doc/DZUNTc1BtaW5oc21B">指南</a>
-                    </li>
-                    <li>
-                        <a class="nav-link" href="html/rules.html">规则</a>
-                    </li>
-                    <li>
-                        <a class="nav-link" href="html/report.html">工单</a>
-                    </li>
-                        <a class="nav-link" target="_blank" href="https://afdian.net/@cubex">捐款</a>
-                    </li>
-                    <li>
-                        <a class="nav-link" target="_blank" href="https://jq.qq.com/?_wv=1027&k=g38XNewm">QQ群</a>
-                    </li>
-                    <li>
-                        <a class="nav-link" target="_blank" href="https://discord.gg/QBN7wPydh7">Discord</a>
-                    </li>
-                </ul>
+    <header>
+        <h1>⚔️ 我的世界服务器</h1>
+        <p id="server-ip">IP: mc.yourserver.com</p>
+    </header>
+
+    <main>
+        <!-- 服务器状态 -->
+        <section class="card">
+            <h2>🟢 实时状态</h2>
+            <div id="server-status">
+                <p>玩家在线: <span id="online-players">0</span>/<span id="max-players">20</span></p>
+                <p>版本: <span id="server-version">加载中...</span></p>
             </div>
-        </nav>
-    </div>
-    <div class="container" style="color: white;">
-        <div class="row text-center">
-            <h1 style="margin-top: 10vh; margin-bottom: 1vh; color: rgb(255, 255, 255); text-shadow: 1px 1px 1px rgb(0,0,0,0.5);"><b><span style="color:rgb(202, 0, 0)">Cube</span>X</b> 养老服务器</h1>
-        </div>
-        <div class="row">
-            <div class="col text-center">
-                <p style="color: rgb(255, 255, 255); text-shadow: 1px 1px 1px rgb(0,0,0,0.5); margin-bottom: 1vh;"><b>IP：play.cubexmc.net (java) </b></p>
-                <p style="color: rgb(255, 255, 255); text-shadow: 1px 1px 1px rgb(0,0,0,0.5); margin-bottom: 1vh"><b>QQ群：470579814</b></p>
-                <a target="_blank" href="https://www.bilibili.com/video/BV1Je411V7ko/" class="btn btn-danger" style="box-shadow: 0 1px 1px 0 rgb(0,0,0,0.5);" data-loading-text="Loading..." 
-                    type="button"> <b>宣传片</b>
-                </a>
-                <a target="_blank" href="https://pan.baidu.com/s/1QdntVzwvBSVLxp_YxAa_Ug?pwd=cube" class="btn btn-light" style="margin-left:1rem; box-shadow: 0 1px 1px 0 rgb(0,0,0,0.5);" data-loading-text="Loading..." 
-                    type="button"> <b>整合包</b>
-                </a>
+        </section>
 
-                <div class="row" style="margin-top: 2rem; opacity: 0.8">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-arrow-down-circle-fill" viewBox="0 0 16 16">
-                        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z"/>
-                    </svg>
-                </div>
-                
-                <!-- staff -->
-                <div class="row" style="margin-top: 2rem;">
-                    <h4 style="color: rgb(255, 255, 255); text-shadow: 1px 1px 1px rgb(0,0,0,0.3); margin-bottom: 1%;">
-                        管理:</h4>
-                        <p style="color: rgb(255, 255, 255); text-shadow: 1px 1px 1px rgb(0,0,0,0.3); margin-bottom: 0%;">
-                        [退休]00
-                        | <a target="_blank" href="http://angushushu.com" style="text-decoration:none; color:white; margin-bottom: 0%;">[退休]angushushu</a>
-                        | [退休]AkariDream
-                        | fire_God
-                        | [退休]Furiina
-                        | [退休]heckteck<br>
-                        <a target="_blank" href="https://space.bilibili.com/3732751" style="text-decoration:none; color:white; margin-bottom: 0%;">[退休]linzaiua</a>
-                        | <a target="_blank" href="https://siyangchen.com/" style="text-decoration:none; color:white;margin-bottom: 0%;">SiYang</a> 
-                        | [退休]Tomeggo</a>
-                        | <a target="_blank" href="http://www.miaomoe.net" style="text-decoration:none; color:white;margin-bottom: 0%;">[退休]XY_kuailexy</a>
-                        | <a target="_blank" href="https://blog.hotwind.cc" style="text-decoration:none; color:white; margin-bottom: 0%;">HotWind</a><br>
-                        | <a target="_blank" href="https://adlambxd.github.io" style="text-decoration:none; color:white; margin-bottom: 0%;">yzh</a>
-                        | <a target="_blank" href="https://zh-cn.namemc.com/profile/NinKauneus.1" style="text-decoration:none; color:white; margin-bottom: 0%;">NinKauneus</a>
-                        | Mark_Q
-                        | <a target="_blank" href="adlambxd.github.io" style="text-decoration:none; color:white; margin-bottom: 0%;">AdLamb</a>
+        <!-- 在线玩家 -->
+        <section class="card">
+            <h2>👥 在线玩家</h2>
+            <ul id="player-list">
+                <li>正在获取玩家列表...</li>
+            </ul>
+        </section>
 
-                        </p>
-                    <h4 style="color: rgb(255， 255， 255); text-shadow: 1px 1px 1px rgb(0,0,0,0.3); margin-bottom: 1%;"><br>
-                        建筑:</h4>
-                        <p style="color: rgb(255, 255, 255); text-shadow: 1px 1px 1px rgb(0,0,0,0.3); margin-bottom: 0%;">
-                        qorhe
-                        | wudimoyuren
-                        </p>
-                </div>
+        <!-- 公告 -->
+        <section class="card">
+            <h2>📢 最新公告</h2>
+            <div class="announcement">
+                <h3>欢迎加入我们的服务器！</h3>
+                <p>发布日期: 2023-10-01</p>
+                <p>遵守规则，共建和谐社区！</p>
             </div>
-            <!-- <div class="col">Col 2</div> -->
-        </div>
-    </div>
+        </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <!-- 服务器规则 -->
+        <section class="card">
+            <h2>📜 服务器规则</h2>
+            <ol class="rules">
+                <li>禁止使用任何作弊工具</li>
+                <li>尊重其他玩家</li>
+                <li>禁止破坏他人建筑</li>
+                <li>发现BUG请及时报告</li>
+            </ol>
+        </section>
+    </main>
+
+    <footer>
+        <p>© 2023 Minecraft服务器 | 由GitHub Pages托管</p>
+    </footer>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
