--- a/index.html
+++ b/index.html
@@ -1,61 +1,172 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minecraft服务器状态</title>
-    <link rel="stylesheet" href="css/style.css">
+    <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
+    <title>方块叉 CubeX</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <style>
+        body {
+            background-color: #1a1a1a;
+            color: white;
+        }
+        .hidden {
+            display: none;
+        }
+        .navbar-dark {
+            background-color: #2d2d2d;
+        }
+        .card {
+            background: #2d2d2d;
+            border-radius: 10px;
+            padding: 20px;
+            margin-bottom: 20px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        }
+        .btn {
+            box-shadow: 0 1px 1px 0 rgba(0,0,0,0.5);
+        }
+        .text-shadow {
+            text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>⚔️ 我的世界服务器</h1>
-        <p id="server-ip">IP: mc.yourserver.com</p>
-    </header>
+    <div class="container">
+        <!-- 导航栏 -->
+        <nav class="navbar navbar-expand-md navbar-dark">
+            <a href="#" class="navbar-brand">
+                <img src="imgs/server-icon.png" alt="CubeX icon" width="32" height="32" class="d-inline-block align-bottom">
+                <span class="hidden"><b>方块叉 CubeX</b></span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#toggleMobileMenu" aria-controls="toggleMobileMenu" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="toggleMobileMenu">
+                <ul class="navbar-nav ms-auto text-center">
+                    <li><a class="nav-link" href="index.html"><b>主页</b></a></li>
+                    <li><a class="nav-link" target="_blank" href="https://docs.qq.com/doc/DZUNTc1BtaW5oc21B">指南</a></li>
+                    <li><a class="nav-link" href="html/rules.html">规则</a></li>
+                    <li><a class="nav-link" href="html/report.html">工单</a></li>
+                    <li><a class="nav-link" target="_blank" href="https://afdian.net/@cubex">捐款</a></li>
+                    <li><a class="nav-link" target="_blank" href="https://jq.qq.com/?_wv=1027&k=g38XNewm">QQ群</a></li>
+                    <li><a class="nav-link" target="_blank" href="https://discord.gg/QBN7wPydh7">Discord</a></li>
+                </ul>
+            </div>
+        </nav>
+    </div>
 
-    <main>
+    <div class="container">
+        <!-- 标题和IP -->
+        <div class="row text-center">
+            <h1 class="text-shadow" style="margin-top: 10vh; margin-bottom: 1vh;">
+                <b><span style="color:rgb(202, 0, 0)">Cube</span>X</b> 养老服务器
+            </h1>
+            <p class="text-shadow"><b>IP：play.cubexmc.net (Java)</b></p>
+            <p class="text-shadow"><b>QQ群：470579814</b></p>
+        </div>
+
+        <!-- 按钮 -->
+        <div class="row text-center">
+            <a target="_blank" href="https://www.bilibili.com/video/BV1Je411V7ko/" class="btn btn-danger">
+                <b>宣传片</b>
+            </a>
+            <a target="_blank" href="https://pan.baidu.com/s/1QdntVzwvBSVLxp_YxAa_Ug?pwd=cube" class="btn btn-light" style="margin-left: 1rem;">
+                <b>整合包</b>
+            </a>
+        </div>
+
         <!-- 服务器状态 -->
-        <section class="card">
-            <h2>🟢 实时状态</h2>
-            <div id="server-status">
-                <p>玩家在线: <span id="online-players">0</span>/<span id="max-players">20</span></p>
-                <p>版本: <span id="server-version">加载中...</span></p>
+        <div class="row text-center" style="margin-top: 2rem;">
+            <div class="card">
+                <h2>🟢 实时状态</h2>
+                <div id="server-status">
+                    <p>状态: <span id="status">加载中...</span></p>
+                    <p>在线玩家: <span id="online-players">0</span>/<span id="max-players">20</span></p>
+                    <p>版本: <span id="server-version">加载中...</span></p>
+                </div>
             </div>
-        </section>
+        </div>
 
-        <!-- 在线玩家 -->
-        <section class="card">
-            <h2>👥 在线玩家</h2>
-            <ul id="player-list">
-                <li>正在获取玩家列表...</li>
-            </ul>
-        </section>
-
-        <!-- 公告 -->
-        <section class="card">
-            <h2>📢 最新公告</h2>
-            <div class="announcement">
-                <h3>欢迎加入我们的服务器！</h3>
-                <p>发布日期: 2023-10-01</p>
-                <p>遵守规则，共建和谐社区！</p>
+        <!-- 在线玩家列表 -->
+        <div class="row text-center" style="margin-top: 2rem;">
+            <div class="card">
+                <h2>👥 在线玩家</h2>
+                <ul id="player-list">
+                    <li>正在获取玩家列表...</li>
+                </ul>
             </div>
-        </section>
+        </div>
 
-        <!-- 服务器规则 -->
-        <section class="card">
-            <h2>📜 服务器规则</h2>
-            <ol class="rules">
-                <li>禁止使用任何作弊工具</li>
-                <li>尊重其他玩家</li>
-                <li>禁止破坏他人建筑</li>
-                <li>发现BUG请及时报告</li>
-            </ol>
-        </section>
-    </main>
+        <!-- 管理团队 -->
+        <div class="row text-center" style="margin-top: 2rem;">
+            <div class="card">
+                <h2>👑 管理团队</h2>
+                <p>
+                    [退休]00 | <a target="_blank" href="http://angushushu.com" style="text-decoration:none; color:white;">[退休]angushushu</a> | [退休]AkariDream | fire_God | [退休]Furiina | [退休]heckteck<br>
+                    <a target="_blank" href="https://space.bilibili.com/3732751" style="text-decoration:none; color:white;">[退休]linzaiua</a> | <a target="_blank" href="https://siyangchen.com/" style="text-decoration:none; color:white;">SiYang</a> | [退休]Tomeggo<br>
+                    <a target="_blank" href="http://www.miaomoe.net" style="text-decoration:none; color:white;">[退休]XY_kuailexy</a> | <a target="_blank" href="https://blog.hotwind.cc" style="text-decoration:none; color:white;">HotWind</a><br>
+                    <a target="_blank" href="https://adlambxd.github.io" style="text-decoration:none; color:white;">yzh</a> | <a target="_blank" href="https://zh-cn.namemc.com/profile/NinKauneus.1" style="text-decoration:none; color:white;">NinKauneus</a> | Mark_Q | <a target="_blank" href="adlambxd.github.io" style="text-decoration:none; color:white;">AdLamb</a>
+                </p>
+            </div>
+        </div>
 
-    <footer>
-        <p>© 2023 Minecraft服务器 | 由GitHub Pages托管</p>
+        <!-- 建筑团队 -->
+        <div class="row text-center" style="margin-top: 2rem;">
+            <div class="card">
+                <h2>🏗️ 建筑团队</h2>
+                <p>qorhe | wudimoyuren</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- 页脚 -->
+    <footer class="text-center" style="margin-top: 2rem; padding: 1rem; background-color: #2d2d2d;">
+        <p>© 2023 方块叉 CubeX | 由 GitHub Pages 托管</p>
     </footer>
 
-    <script src="js/script.js"></script>
+    <!-- 脚本 -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script>
+        // 获取服务器状态
+        async function fetchServerStatus() {
+            const SERVER_IP = 'play.cubexmc.net'; // 修改为你的服务器IP
+            const API_URL = `https://api.mcsrvstat.us/2/${SERVER_IP}`;
+
+            try {
+                const response = await fetch(API_URL);
+                const data = await response.json();
+
+                // 更新服务器状态
+                document.getElementById('status').textContent = data.online ? '在线' : '离线';
+                document.getElementById('online-players').textContent = data.players.online;
+                document.getElementById('max-players').textContent = data.players.max;
+                document.getElementById('server-version').textContent = data.version;
+
+                // 更新在线玩家列表
+                const playerList = document.getElementById('player-list');
+                playerList.innerHTML = '';
+                if (data.players.list) {
+                    data.players.list.forEach(player => {
+                        const li = document.createElement('li');
+                        li.textContent = player;
+                        playerList.appendChild(li);
+                    });
+                } else {
+                    playerList.innerHTML = '<li>暂无在线玩家</li>';
+                }
+            } catch (error) {
+                console.error('获取服务器状态失败:', error);
+                document.getElementById('server-status').innerHTML = '<p>❌ 服务器状态获取失败</p>';
+            }
+        }
+
+        // 页面加载后自动刷新状态
+        document.addEventListener('DOMContentLoaded', () => {
+            fetchServerStatus();
+            setInterval(fetchServerStatus, 10000); // 每10秒刷新一次
+        });
+    </script>
 </body>
 </html>
