--- a/index.html
+++ b/index.html
@@ -6,49 +6,7 @@
     <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
     <title>方块叉 CubeX</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <style>
-        body {
-            background-color: #1a1a1a;
-            color: white;
-        }
-        .hidden {
-            display: none;
-        }
-        .navbar-dark {
-            background-color: #2d2d2d;
-        }
-        .card {
-            background: #2d2d2d;
-            border-radius: 10px;
-            padding: 20px;
-            margin-bottom: 20px;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-        }
-        .btn {
-            box-shadow: 0 1px 1px 0 rgba(0,0,0,0.5);
-        }
-        .text-shadow {
-            text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
-        }
-        .container {
-            margin-top: 2rem;
-        }
-        .navbar-nav {
-            margin-right: 0;
-        }
-        .navbar-nav .nav-link {
-            margin-right: 1rem;
-        }
-        .row.text-center {
-            margin-bottom: 2rem;
-        }
-        .card h2 {
-            margin-bottom: 1rem;
-        }
-        footer {
-            margin-top: 4rem;
-        }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container">
@@ -146,48 +104,6 @@
 
     <!-- 脚本 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script>
-        // 获取服务器状态
-        async function fetchServerStatus() {
-            const SERVER_IP = 'play.cubexmc.top'; // 修改为你的服务器IP
-            const API_URL = `https://api.mcsrvstat.us/2/${SERVER_IP}`;
-
-            try {
-                const response = await fetch(API_URL);
-                const data = await response.json();
-
-                // 添加调试信息
-                console.log('API Response:', data);
-
-                // 更新服务器状态
-                document.getElementById('status').textContent = data.online ? '在线' : '离线';
-                document.getElementById('online-players').textContent = data.players ? data.players.online : '0';
-                document.getElementById('max-players').textContent = data.players ? data.players.max : '0';
-                document.getElementById('server-version').textContent = data.version || '未知';
-
-                // 更新在线玩家列表
-                const playerList = document.getElementById('player-list');
-                playerList.innerHTML = '';
-                if (data.players && data.players.list && data.players.list.length > 0) {
-                    data.players.list.forEach(player => {
-                        const li = document.createElement('li');
-                        li.textContent = player;
-                        playerList.appendChild(li);
-                    });
-                } else {
-                    playerList.innerHTML = '<li>暂无在线玩家</li>';
-                }
-            } catch (error) {
-                console.error('获取服务器状态失败:', error);
-                document.getElementById('server-status').innerHTML = '<p>❌ 服务器状态获取失败</p>';
-            }
-        }
-
-        // 页面加载后自动刷新状态
-        document.addEventListener('DOMContentLoaded', () => {
-            fetchServerStatus();
-            setInterval(fetchServerStatus, 10000); // 每10秒刷新一次
-        });
-    </script>
+    <script src="js/script.js"></script>
 </body>
 </html>
