--- a/index.html
+++ b/index.html
@@ -11,28 +11,51 @@
 </head>
 <body>
     <!-- 导航栏 -->
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <div class="container">
+    <div class="container">
+        <nav class="navbar navbar-expand-md navbar-dark">
             <a href="#" class="navbar-brand">
                 <img src="imgs/server-icon.png" alt="CubeX icon" width="32" height="32" class="d-inline-block align-bottom">
                 <span class="hidden"><b>方块叉 CubeX</b></span>
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#toggleMobileMenu" aria-controls="toggleMobileMenu" aria-expanded="false" aria-label="Toggle navigation">
+            <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#toggleMobileMenu"
+                aria-controls="toggleMobileMenu"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+            >
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="toggleMobileMenu">
                 <ul class="navbar-nav ms-auto text-center">
-                    <li><a class="nav-link" href="index.html"><b>主页</b></a></li>
-                    <li><a class="nav-link" target="_blank" href="https://docs.qq.com/doc/DZUNTc1BtaW5oc21B">指南</a></li>
-                    <li><a class="nav-link" href="html/rules.html">规则</a></li>
-                    <li><a class="nav-link" href="html/report.html">工单</a></li>
-                    <li><a class="nav-link" target="_blank" href="https://afdian.net/@cubex">捐款</a></li>
-                    <li><a class="nav-link" target="_blank" href="https://jq.qq.com/?_wv=1027&k=g38XNewm">QQ群</a></li>
-                    <li><a class="nav-link" target="_blank" href="https://discord.gg/QBN7wPydh7">Discord</a></li>
+                    <li>
+                        <a class="nav-link" href="index.html"><b>主页</b></a>
+                    </li>
+                    <li>
+                        <a class="nav-link" target="_blank" href="https://docs.qq.com/doc/DZUNTc1BtaW5oc21B">指南</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="html/rules.html">规则</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="html/report.html">工单</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" target="_blank" href="https://afdian.net/@cubex">捐款</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" target="_blank" href="https://jq.qq.com/?_wv=1027&k=g38XNewm">QQ群</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" target="_blank" href="https://discord.gg/QBN7wPydh7">Discord</a>
+                    </li>
                 </ul>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </div>
+
 
     <div class="container">
         <!-- 标题和IP -->
