--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <a class="nav-link" href="html/report.html">工单</a>
                     </li>
                     <li>
-                        <a class="nav-link" target="_blank" href="https://afdian.net/@cubex">捐款</a>
+                        <a class="nav-link" target="_blank" href="https://afdian.com/@cubex">捐款</a>
                     </li>
                     <li>
                         <a class="nav-link" target="_blank" href="https://jq.qq.com/?_wv=1027&k=g38XNewm">QQ群</a>
