--- a/html/report.html
+++ b/html/report.html
@@ -46,7 +46,7 @@
                         <a class="nav-link" href="report.html"><b>工单</b></a>
                     </li>
                     <li>
-                        <a class="nav-link" target="_blank" href="https://afdian.net/@cubex">捐款</a>
+                        <a class="nav-link" target="_blank" href="https://afdian.com/@cubex">捐款</a>
                     </li>
                     <li>
                         <a class="nav-link" target="_blank" href="https://jq.qq.com/?_wv=1027&k=g38XNewm">QQ群</a>
