--- a/html/rules.html
+++ b/html/rules.html
@@ -46,7 +46,7 @@
                         <a class="nav-link" href="report.html" style="text-shadow: 1px 1px 1px rgb(0,0,0,0.5)">工单</a>
                     </li>
                     <li>
-                        <a class="nav-link" target="_blank" href="https://afdian.net/@cubex" style="text-shadow: 1px 1px 1px rgb(0,0,0,0.5)">捐款</a>
+                        <a class="nav-link" target="_blank" href="https://afdian.com/@cubex" style="text-shadow: 1px 1px 1px rgb(0,0,0,0.5)">捐款</a>
                     </li>
                     <li>
                         <a class="nav-link" target="_blank" href="https://jq.qq.com/?_wv=1027&k=g38XNewm" style="text-shadow: 1px 1px 1px rgb(0,0,0,0.5)">QQ群</a>
