feat(server-status): 实现多服务器状态展示
- 将单个服务器状态展示扩展为多个服务器
- 新增主服务器、怀旧服和HXLS服务器的状态展示
- 优化页面布局，使用分割线区分不同服务器
- 重构代码以支持多个服务器状态的获取和更新

--- a/index.html
+++ b/index.html
@@ -84,29 +84,29 @@
                 <div class="card">
                     <h2 class="card-header">🟢 实时状态</h2>
                     <div class="card-body">
-                        <p>状态: <span id="status">加载中...</span></p>
-                        <p>在线玩家: <span id="online-players">0</span>/<span id="max-players">20</span></p>
-                        <p>版本: <span id="server-version">加载中...</span></p>
-                        <h3 class="mt-4">👥 在线玩家</h3>
-                        <ul id="player-list">
-                            <li>正在获取玩家列表...</li>
-                        </ul>
+                        <h3>主服务器</h3>
+                        <p>状态: <span id="status-main">加载中...</span></p>
+                        <p>在线玩家: <span id="online-players-main">0</span>/<span id="max-players-main">20</span></p>
+                        <p>版本: <span id="server-version-main">加载中...</span></p>
+                    </div>
+                    <p class="text-center">——=分割线=——</p>
+                    <div class="card-body">
+                        <h3>怀旧服</h3>
+                        <p>状态: <span id="status-nostalgia">加载中...</span></p>
+                        <p>在线玩家: <span id="online-players-nostalgia">0</span>/<span id="max-players-nostalgia">20</span></p>
+                        <p>版本: <span id="server-version-nostalgia">加载中...</span></p>
+                    </div>
+                    <p class="text-center">——=分割线=——</p>
+                    <div class="card-body">
+                        <h3>HXLS</h3>
+                        <p>状态: <span id="status-HXLS">加载中...</span></p>
+                        <p>在线玩家: <span id="online-players-HXLS">0</span>/<span id="max-players-xmzh">20</span></p>
+                        <p>版本: <span id="server-version-HXLS">加载中...</span></p>
                     </div>
                 </div>
             </div>
             <div class="col-md-6">
                 <!-- 管理团队和建筑团队 -->
-                <div class="card mb-4">
-                    <h2 class="card-header">👑 退休团队</h2>
-                    <div class="card-body">
-                        <p>
-                            AkariDream | <a target="_blank" href="http://angushushu.com" style="text-decoration:none; color:white;">angushushu</a> | fire_god | Furiina<br>
-                            heckteck | <a target="_blank" href="https://blog.hotwind.cc" style="text-decoration:none; color:white;">HotWind</a> | linzaiua | qorhe<br>
-                            RoiAsn | Shioeaxiki | <a target="_blank" href="https://siyangchen.com/" style="text-decoration:none; color:white;">SiYang</a> | Tao_xiaobai<br>
-                            Tomeggo<br>
-                        </p>
-                    </div>
-                </div>
                 <div class="card mb-4">
                     <h2 class="card-header">👷‍♂️ 在职团队</h2>
                     <div class="card-body">
@@ -126,12 +126,23 @@
                         </p>
                     </div>
                 </div>
+                <div class="card mb-4">
+                    <h2 class="card-header">💀 退休团队</h2>
+                    <div class="card-body">
+                        <p>
+                            AkariDream | <a target="_blank" href="http://angushushu.com" style="text-decoration:none; color:white;">angushushu</a> | fire_god | Furiina<br>
+                            heckteck | <a target="_blank" href="https://blog.hotwind.cc" style="text-decoration:none; color:white;">HotWind</a> | linzaiua | qorhe<br>
+                            RoiAsn | Shioeaxiki | <a target="_blank" href="https://siyangchen.com/" style="text-decoration:none; color:white;">SiYang</a> | Tao_xiaobai<br>
+                            Tomeggo<br>
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
 
         <!-- 页脚 -->
         <footer class="text-center mt-5">
-            <p>© 2025 方块叉 CubeX</p>
+            <p>© 2025 方块叉 <a href="https://github.com/CubeX-MC">CubeX</a></p>
         </footer>
 
         <!-- 脚本 -->
