refactor(index): 重构在职团队、试用团队和退休团队的展示方式
- 将团队成员列表替换为加载中...的提示
- 添加 team.js 脚本，用于动态加载团队成员数据
- 优化 HTML 结构，提高可维护性

--- a/index.html
+++ b/index.html
@@ -110,30 +110,24 @@
                 <div class="card mb-4">
                     <h2 class="card-header">👷‍♂️ 在职团队</h2>
                     <div class="card-body">
-                        <p>
-                            <a target="_blank" href="https://adlambxd.github.io" style="text-decoration:none; color:white;">Adlamb</a> | Bedrock_DragonXG | Brilliant_Boboo | Ender<br>
-                            GNBM | Herobrine | HXLS | janhous<br>
-                            Jason31416 | Mark_Q | Morgen_MC | NinKauneus<br>
-                            Qreakee | Ricky<br>
+                        <p id="management_team">
+                            加载中...
                         </p>
                     </div>
                 </div>
                 <div class="card mb-4">
                     <h2 class="card-header">🚧 试用团队</h2>
                     <div class="card-body">
-                        <p>
-                            wudimoyuren
+                        <p id="trial_team">
+                            加载中...
                         </p>
                     </div>
                 </div>
                 <div class="card mb-4">
                     <h2 class="card-header">💀 退休团队</h2>
                     <div class="card-body">
-                        <p>
-                            AkariDream | <a target="_blank" href="http://angushushu.com" style="text-decoration:none; color:white;">angushushu</a> | fire_god | Furiina<br>
-                            heckteck | <a target="_blank" href="https://blog.hotwind.cc" style="text-decoration:none; color:white;">HotWind</a> | linzaiua | qorhe<br>
-                            RoiAsn | Shioeaxiki | <a target="_blank" href="https://siyangchen.com/" style="text-decoration:none; color:white;">SiYang</a> | Tao_xiaobai<br>
-                            Tomeggo<br>
+                        <p id="retired_team">
+                            加载中...
                         </p>
                     </div>
                 </div>
@@ -148,6 +142,7 @@
         <!-- 脚本 -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <script src="js/script.js"></script>
+        <script src="js/team.js"></script>
     </div>
 </body>
 </html>
