refactor(status): 优化服务器状态显示和团队列表样式
- 调整服务器状态显示格式，增加在线/离线图标和样式
- 更新团队列表样式，增加字体大小和阴影效果
- 重构服务器状态获取逻辑，提高代码可读性和健壮性
- 优化导航栏样式，调整链接间距和字体大小
- 移除不必要的 HTML 结构，简化页面布局

--- a/index.html
+++ b/index.html
@@ -84,24 +84,30 @@
                 <div class="card">
                     <h2 class="card-header">🟢 实时状态</h2>
                     <div class="card-body">
-                        <h3>主服务器</h3>
-                        <p>状态: <span id="status-main">加载中...</span></p>
-                        <p>在线玩家: <span id="online-players-main">0</span>/<span id="max-players-main">20</span></p>
-                        <p>版本: <span id="server-version-main">加载中...</span></p>
+                        <div class="hanggao">
+                            <h3>主服务器</h3>
+                            <p>状态: <span id="status-main">加载中...</span></p>
+                            <p>在线玩家: <span id="online-players-main">0</span>/<span id="max-players-main">20</span></p>
+                            <p>版本: <span id="server-version-main">加载中...</span></p>
+                        </div>
                     </div>
                     <p class="text-center">——=分割线=——</p>
                     <div class="card-body">
-                        <h3>怀旧服</h3>
-                        <p>状态: <span id="status-nostalgia">加载中...</span></p>
-                        <p>在线玩家: <span id="online-players-nostalgia">0</span>/<span id="max-players-nostalgia">20</span></p>
-                        <p>版本: <span id="server-version-nostalgia">加载中...</span></p>
+                        <div class="hanggao">
+                            <h3>怀旧服</h3>
+                            <p>状态: <span id="status-nostalgia">加载中...</span></p>
+                            <p>在线玩家: <span id="online-players-nostalgia">0</span>/<span id="max-players-nostalgia">20</span></p>
+                            <p>版本: <span id="server-version-nostalgia">加载中...</span></p>
+                        </div>
                     </div>
                     <p class="text-center">——=分割线=——</p>
                     <div class="card-body">
-                        <h3>HXLS</h3>
-                        <p>状态: <span id="status-HXLS">加载中...</span></p>
-                        <p>在线玩家: <span id="online-players-HXLS">0</span>/<span id="max-players-xmzh">20</span></p>
-                        <p>版本: <span id="server-version-HXLS">加载中...</span></p>
+                        <div class="hanggao">
+                            <h3>HXLS</h3>
+                            <p>状态: <span id="status-HXLS">加载中...</span></p>
+                            <p>在线玩家: <span id="online-players-HXLS">0</span>/<span id="max-players-HXLS">20</span></p>
+                            <p>版本: <span id="server-version-HXLS">加载中...</span></p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -110,7 +116,7 @@
                 <div class="card mb-4">
                     <h2 class="card-header">👷‍♂️ 在职团队</h2>
                     <div class="card-body">
-                        <p id="management_team">
+                        <p id="management_team" style="font-size: 18px;">
                             加载中...
                         </p>
                     </div>
@@ -118,7 +124,7 @@
                 <div class="card mb-4">
                     <h2 class="card-header">🚧 试用团队</h2>
                     <div class="card-body">
-                        <p id="trial_team">
+                        <p id="trial_team" style="font-size: 18px;">
                             加载中...
                         </p>
                     </div>
@@ -126,7 +132,7 @@
                 <div class="card mb-4">
                     <h2 class="card-header">💀 退休团队</h2>
                     <div class="card-body">
-                        <p id="retired_team">
+                        <p id="retired_team" style="font-size: 18px;">
                             加载中...
                         </p>
                     </div>
