--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     </div>
                 </div>
                 <div class="card mb-4">
-                    <h2 class="card-header">💀 退休团队</h2>
+                    <h2 class="card-header">☀️ 荣誉团队</h2>
                     <div class="card-body">
                         <p id="retired_team" style="font-size: 18px;">
                             加载中...
