--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
         <!-- 按钮 -->
         <div class="row text-center mb-5">
             <div class="d-flex justify-content-center">
+                <a target="_blank" href="https://flowus.cn/cubex/share/077c8f04-bc13-4708-b72b-0b196d315e35?code=U2NN84" class="btn btn-danger btn-custom-size me-2">
+                    <b>文档</b>
+                </a>
                 <a target="_blank" href="https://www.bilibili.com/video/BV1Je411V7ko/" class="btn btn-danger btn-custom-size me-2">
                     <b>宣传片</b>
                 </a>
